# computer-vision

./: .gitignore  README.md  opencv_installation
SIFT/: CMakeLists.txt  simple.cpp
esami/canny-hough/: main.cpp
esami/esame_vince_201222/: 339641.cpp  CMakeLists.txt  ok.cpp
esami/esame_vince_201222/soluzione_corretta_vince/: CMakeLists.txt  sol.cpp
esami/exam-07-01-2020/: .cproject  .project  simple.cpp
esami/exam-19-12-2019/: CMakeLists.txt  main.cpp
esami/exam-20-12-2022/: CMakeLists.txt  main.cpp  simple.cpp  vince.cpp
esami/exam-28-01-2020/: .cproject  simple.cpp
esami/exam-28-01-2020/images/: left.pgm
lab0/: CMakeLists.txt  simple.cpp
lab1/: 11downsample.cpp  12luminance.cpp  13simple.cpp  CMakeLists.txt  es1_10.cpp
lab1a/: CMakeLists.txt  conv3D.cpp  convolution.cpp  es1.cpp
lab1a/images/: tmp.py
lab2/: CMakeLists.txt  es1.cpp  es2.cpp  es3.cpp
lab2_9_otsu/: CMakeLists.txt  binarization.cpp  binarization1.cpp
lab3/: CMakeLists.txt  eroding_dilating.cpp  eroding_dilating_modified.cpp
lab4/: L04-pinhole-solved.tgz  main.cpp  utils.h
lab4a/: CMakeLists.txt  CannyEdgeDetector.cpp  L04a-edges-solved.tgz
lab5/: CMakeLists.txt  main.cpp  utils.h
lab5-21/: CMakeLists.txt  disparity.cpp
